modified:   ms.tex

--- a/ms.tex
+++ b/ms.tex
@@ -157,7 +157,7 @@ minus2pt} \setlength{\baselineskip}{20pt plus2pt minus1pt}
 
 \section{采集过程中的例行维护}
 \subsection{系统状态监控}
-假设采集计算机的ip地址是192.168.4.100，并且假设系统处于“正在采集”，则可以通过访问\url{http://192.168.4.100:8000}访问采集计算机的监控页面，从中可以读取板卡温度、板卡状态和实时频谱。\\
+假设系统处于“正在采集”状态，则可以通过访问\url{http://gateway.skacn.org:8000}访问采集计算机的监控页面，从中可以读取板卡温度、板卡状态和实时频谱。\\
 如果出现板卡温度过高，板卡状态错误，实时频谱异常，应尽快记录并微信或者电话告知。
 
 \subsection{日常巡检}
